fix: vertical-align for replaced elements

--- a/scss/components/_components.row.scss
+++ b/scss/components/_components.row.scss
@@ -3,6 +3,5 @@
     flex-wrap: wrap;
     >div {
         width: 100%;
-        font-size: 0;
     }
 }
