--- a/scss/elements/_elements.base.scss
+++ b/scss/elements/_elements.base.scss
@@ -23,8 +23,9 @@ h1 {
 }
 
 h2 {
-    @include font(40px, Dosis, normal, 3px);
+    margin: 0;
     color: $primary;
+    @include font(40px, Domine, normal, 3px);
 }
 
 h4 {
@@ -34,6 +35,7 @@ h4 {
 
 img {
     width: 100%;
+    vertical-align: middle;
 }
 
 figure {
